tests/invalidTest/typeConvert/test_sin8_1.q
# EXPECT type cannot be converted
def void test(){
  sint8 a = 128
}

